# Stream-Iterator

./: CMakeLists.txt
src/: main.cpp
src/iterator/: CMakeLists.txt  istream_iterator.hpp  ostream_iterator.hpp
